--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,10 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>Welcome to <span class="text-gradient">Astro</span> + QGP</h1>
+		<p class="instructions">
+			Open <a href="/SPA">this</a> to see React SPA in Astro. Now start <code>npm run start-qgp</code> and open <a href="http://localhost:5173/">http://localhost:5173/</a> to see vite-powered HMR in action.
+		</p>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
